# Weak-lensing-mocks

./: CMakeLists.txt  mockhalos.cpp  param_3deg0  param_3deg1  param_3deg2  param_3deg3  param_3deg4  param_3deg5  param_3deg6  param_3deg7  param_3deg8  param_3deg9  param_test  param_test0  param_test1  param_test2  param_test3  param_test4  param_test5  param_test6  param_test7  param_test8  param_test9
ParamFilesVipers/: paramfile_multidarkhalos_w4_1  paramfile_multidarkhalos_w4_10  paramfile_multidarkhalos_w4_2  paramfile_multidarkhalos_w4_3  paramfile_multidarkhalos_w4_4  paramfile_multidarkhalos_w4_5  paramfile_multidarkhalos_w4_6  paramfile_multidarkhalos_w4_7  paramfile_multidarkhalos_w4_8  paramfile_multidarkhalos_w4_9
Plotting/: power_spectra.R
